kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
      - name: model-container
        image: drlamio/house-price-prediction-app:latest
        ports:
        - containerPort: 80
