kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: house-price-prediction-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
  selector:
    app: house-price-prediction
